# PQCOMM

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PHASE_STATUS.md  PHASE!_WIRE_CONTRACT.md  PHASE1_WIRE_CONTRACT.md  SSM_Secure_Communication_Spec_v1.0.md  SSM_USER_FLOW.md  TUI_OVERHAUL_DESIGN.md  demo_run.sh  design.txt  main.c
app/: main.c  tui.h  tui_input.c  tui_input.h  tui_panels.c  tui_panels.h  tui_screen.c  tui_screen.h
core/: atomic.h  channel.h  config.h  io_poll.h  io_poll_win.c  io_wait.h  io_wait_win.c  packet.h  packet_view.h  pool.c  pool.h  resilience_ctx.c  resilience_ctx.h  ring.h  rx_thread.c  rx_thread.h  rx_worker.c  rx_worker.h  scheduler.c  session.c  session.h  tx_thread.c  tx_thread.h  udp.c  udp.h  udp_posix.c  udp_win.c
crypto/: aead.c  aead.h  hkdf.c  hkdf.h  kem.c  kem.h
handshake/: handshake.c  handshake.h
layers/: anti_analysis.c  anti_analysis.h  channel_enc.c  channel_enc.h  kernel_filter_stub.h  offensive.c  offensive.h  packet_parse.c  packet_parse.h  resilience.c  resilience.h  rx_demux.c  rx_demux.h  seq_check.c  seq_check.h  session_enc.c  session_enc.h  session_gate.c  session_gate.h  static_shell.c  static_shell.h
lib/api/: transport_api.c  transport_api.h
lib/connection/: connection_manager.c  connection_manager.h
lib/core/: channel.h  config.h  io_wait_posix.c  packet_view.h  platform.h  resilience_ctx.c  resilience_ctx.h  ring.h  rx_thread.h  rx_worker.h  scheduler.c  scheduler.h  session.c  session.h
lib/crypto/: hkdf.c  hkdf.h  kem.c  kem.h  secure_store.c  secure_store.h  toml_config.c  toml_config.h
lib/discovery/: lan_discovery.c  lan_discovery.h
lib/engine/: adaptive_bitrate.c  adaptive_bitrate.h  audio_capture.c  audio_capture.h  audio_pipeline.c  audio_pipeline.h  audio_worker.c  audio_worker.h  conn_request.c  conn_request.h  crypto_worker.c  crypto_worker.h  file_transfer.c  file_transfer.h  heartbeat.c  heartbeat.h  monitor.c  monitor.h  reconnect.c  reconnect.h  rekey.c  rekey.h  transport_engine.c  transport_engine.h  video_capture.c  video_capture.h  video_worker.c  video_worker.h
lib/group/: group.c  group.h
lib/handshake/: handshake.c
lib/identity/: identity.c  identity.h
lib/layers/: anti_analysis.c  anti_analysis.h  channel_enc.c  kernel_filter.c  kernel_filter.h  kernel_filter_bpf.c  kernel_filter_bpf.h  kernel_filter_stub.c  offensive.c  offensive.h  packet_parse.c  port_hop.c  port_hop.h  resilience.c  rx_demux.c  rx_demux.h  seq_check.c  session_enc.c  session_gate.c  static_shell.c
lib/pipeline/: pipeline_inbound.c  pipeline_inbound.h  pipeline_outbound.c  pipeline_outbound.h  pipeline_selftest.h
lib/relay/: relay.c  relay.h  route_table.c  route_table.h
pipeline/: pipeline_inbound.c  pipeline_inbound.h  pipeline_selftest.c
tests/: test_abr.c  test_anti_analysis.c  test_audio.c  test_benchmark.c  test_connect.c  test_fec_loss.c  test_fuzz.c  test_group.c  test_helpers.c  test_helpers.h  test_identity.c  test_jitter.c  test_kernel_filter.c  test_kernel_filter_bpf.c  test_lan_integration.c  test_load.c  test_multipath_failover.c  test_offensive.c  test_path_metrics.c  test_port_hop.c  test_property.c  test_reconnect.c  test_route_table.c  test_runner_main.c
